implement: Chat page, Friend list page, Setting page, ThemeContext